docs/0.18.2/_sources/api/gammapy.maps.MapAxes.rst.txt
MapAxes
=======

.. currentmodule:: gammapy.maps

.. autoclass:: MapAxes
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapAxes.names
      ~MapAxes.shape

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapAxes.coord_to_idx
      ~MapAxes.coord_to_pix
      ~MapAxes.count
      ~MapAxes.downsample
      ~MapAxes.drop
      ~MapAxes.from_default
      ~MapAxes.from_table_hdu
      ~MapAxes.index
      ~MapAxes.index_data
      ~MapAxes.pix_to_coord
      ~MapAxes.resample
      ~MapAxes.slice_by_idx
      ~MapAxes.squash
      ~MapAxes.to_header
      ~MapAxes.to_table
      ~MapAxes.to_table_hdu
      ~MapAxes.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: names
   .. autoattribute:: shape

   .. rubric:: Methods Documentation

   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: count
   .. automethod:: downsample
   .. automethod:: drop
   .. automethod:: from_default
   .. automethod:: from_table_hdu
   .. automethod:: index
   .. automethod:: index_data
   .. automethod:: pix_to_coord
   .. automethod:: resample
   .. automethod:: slice_by_idx
   .. automethod:: squash
   .. automethod:: to_header
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: upsample
